Make plugin Android Studio-compatible (Java 8 + optional dependency on externalSystem)